<resources>
    <string name="app_name">CureHealth</string>
    <string name="title_fragment_home">Home</string>
    <string name="title_fragment_trending">Trending</string>
    <string name="title_fragment_orders">Orders</string>
    <string name="title_fragment_cart">Cart</string>
    <string name="title_fragment_profile">Profile</string>
    <string name="login">Login</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="mobile">Mobile</string>
    <string name="shop_name">Shop name</string>
    <string name="shop_address">Shop Address</string>
    <string name="nid_number">NID Number</string>
    <string name="license">License</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register_new_account">Register new account</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="help_line_01860998499">Help Line (01860998499)</string>
    <string name="profile_change">Profile Change</string>
    <string name="reset">Reset</string>
    <string name="change_picture">Change Picture</string>
    <string name="update">Update</string>
    <string name="update_password">Update Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="enter_your_old_password">Enter Your Old Password</string>
    <string name="enter_your_new_password">Enter Your New Password</string>
    <string name="enter_new_password_again">Enter New Password Again</string>
    <string name="enter_your_first_name">Enter Your First Name</string>
    <string name="enter_your_last_name">Enter Your Last Name</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="enter_your_shop_name">Enter Your Shop Name</string>
    <string name="enter_your_shop_address">Enter Your Shop Address</string>
    <string name="enter_your_nid">Enter Your Nid Number</string>
    <string name="enter_your_license_number">Enter Your License Number</string>
    <string name="place_order">Place Order</string>
    <string name="unique_item_s">Unique item(s) :</string>
    <string name="total_amount">Total amount :</string>
    <string name="star">*</string>
    <string name="error_title">Error</string>
    <string name="ok">OK</string>
    <string name="don_t_have_an_account_register">Don’t have an account? Register</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="sign">৳</string>
    <string name="enter_your_password_here">Enter your password here</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="filter">Filter</string>
    <string name="apply">Apply</string>
    <string name="company_filter">Company Filter</string>
    <string name="form_filter">Form Filter</string>
    <string name="mark_as_read">Mark As Read</string>
    <string name="money_sign">৳</string>
    <string name="search_medicine_name_to_get_started">Search medicine name to get started</string>
    <string name="order_medicines">Order medicines</string>
    <string name="quickly">Quickly</string>
    <string name="at_you_convenience">At you convenience</string>
    <string name="call_us_01860998499">Call Us (01860998499)</string>
    <string name="unique_items">Unique items :</string>
    <string name="in_total">in total ৳</string>
    <string name="success">Success</string>
    <string name="status">Status</string>
    <string name="pending">Pending</string>
    <string name="total">Total :</string>
    <string name="estimated_delivery">Estimated Delivery</string>
    <string name="order">Order</string>
    <string name="back_to_home">Go Back</string>
    <string name="back_to_login">Back to Login</string>
    <string name="phone">Phone</string>
    <string name="forgot_password_1">Forgot Password</string>
    <string name="update_available">Update Available</string>
    <string name="force_update_text">Please update your apk for your use</string>
    <string name="no_product_found">No Product Found</string>
</resources>