<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.devshawon.curehealthcare.ui.fragments.HomeViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_icon_user_home"
                app:title="Profile"/>
        </com.google.android.material.appbar.AppBarLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/divider"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:layout_margin="@dimen/_8sdp"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/old_password"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginTop="@dimen/_12ssp"
                    android:textStyle="bold"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_round"
                    android:padding="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:inputType="text"
                    android:textSize="@dimen/_12ssp"
                    android:autofillHints=""
                    android:hint="@string/enter_your_old_password"
                    android:text="@={viewModel.oldPassword}"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_password"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginTop="@dimen/_12ssp"
                    android:textStyle="bold"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_round"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:inputType="text"
                    android:padding="@dimen/_8sdp"
                    android:textSize="@dimen/_12ssp"
                    android:autofillHints=""
                    android:hint="@string/enter_your_new_password"
                    android:text="@={viewModel.newPassword}"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_new_password"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginTop="@dimen/_12ssp"
                    android:textStyle="bold"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_round"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:inputType="text"
                    android:padding="@dimen/_8sdp"
                    android:textSize="@dimen/_12ssp"
                    android:hint="@string/enter_new_password_again"
                    android:autofillHints=""
                    android:text="@={viewModel.confirmNewPassword}"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/update_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_18sdp"
                    android:background="@drawable/update_submit_button"
                    android:padding="@dimen/_8sdp"
                    android:textSize="@dimen/_12ssp"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/update_password"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>