<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.devshawon.curehealthcare.ui.fragments.HomeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:layout_margin="@dimen/_8sdp"
        android:orientation="vertical"
        >
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/profile_change"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/profile_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_chainStyle="packed"
                android:src="@drawable/ic_icon_plus"
                app:layout_constraintEnd_toStartOf="@id/profile_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <Button
                android:id="@+id/profile_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/profile_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_12ssp"
            android:textStyle="bold"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@={viewModel.firstName}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_12ssp"
            android:textStyle="bold"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@={viewModel.lastName}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_12ssp"
            android:textStyle="bold"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@={viewModel.mobile}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shop_name"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_12ssp"
            android:textStyle="bold"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@={viewModel.shopName}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shop_address"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_12ssp"
            android:textStyle="bold"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@={viewModel.shopAddress}"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nid_number"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_12ssp"
            android:textStyle="bold"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@={viewModel.nid}"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/license"
            android:textSize="@dimen/_12ssp"
            android:layout_marginTop="@dimen/_12ssp"
            android:textStyle="bold"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@={viewModel.license}"/>

    </LinearLayout>
</layout>